--- a/afro-front/public/main.css
+++ b/afro-front/public/main.css
@@ -109,7 +109,7 @@ margin-top: 80px;
 .heropage{
     position: absolute;
     color:white;
-   margin-top: 100px;
+   margin-top: 60px;
    margin-left: 100px;
 }
 .inside-heropage{
@@ -915,12 +915,12 @@ margin-left: 120px;
     border-radius: 20px; /* Rounded corners */
     transition: all 0.3s ease-in-out; /* Smooth transition for effects */
     outline: none; /* Removes the outline */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
+    box-shadow: none; 
 }
 
 #searchInput:focus {
     border-color: #007bff; /* Changes border color on focus */
-    box-shadow: 0 0 8px rgba(0, 123, 255, 0.5); /* More pronounced shadow on focus */
+    box-shadow: none; 
     width: 350px; /* Optionally expand the input field */
 }
 
